# egis-agent-studio

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  Layout.vue  router.ts
frontend/src/api/: index.ts
frontend/src/components/agui/: README.md  index.ts
frontend/src/components/agui/a2ui/: A2UICard.vue  a2ui.ts  index.ts
frontend/src/components/agui/docgen/: DocxDeliveryCard.vue  DocxEditorDrawer.vue  EntryCard.vue  InvestmentReportDrawer.vue  PensionIntroCard.vue  StandardDocCard.vue  UploadCard.vue  WordEditorCard.vue  index.ts
frontend/src/components/agui/outline/: OutlineCard.vue  index.ts
frontend/src/components/agui/pptist-drawer/: PPTistDrawer.vue  index.ts
frontend/src/components/agui/svg-preview/: SvgPreview.vue  appendSvgPage.ts  index.ts  types.ts
frontend/src/components/agui/thinking/: ThinkingCard.vue  index.ts
frontend/src/components/agui/todo/: TodoCard.vue  index.ts  todoHelpers.ts
frontend/src/views/: AgentStudio.vue
frontend/src/views/chat/: ChatView.vue  markdown.ts  messageHelpers.ts  streamParser.ts  useChat.ts  useRag.ts  useReferences.ts
frontend/src/views/chat/components/: ReferenceDrawer.vue
scripts/: clear_chats.sh
src/egis_agent_studio/: __init__.py  app.py  config.py  models.py  router.py
src/egis_agent_studio/services/: __init__.py  agent_service.py  chat_service.py  rag_service.py
